--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "outorga-backend-2025",
+  "name": "gestor-de-chamados-backend-2025",
   "version": "0.0.1",
   "description": "",
   "author": "",
@@ -12,6 +12,7 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
+    "start:dev": "nest start --watch",
     "dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
